--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -27,5 +27,8 @@
     "@shopify/jest-dom-mocks": "^2.1.1",
     "typescript": "~3.0.1"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "dependencies": {
+    "tslib": "^1.9.3"
+  }
 }
