--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/dates/README.md",
   "dependencies": {
-    "@shopify/javascript-utilities": "^2.2.0"
+    "@shopify/javascript-utilities": "^2.2.0",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@shopify/jest-dom-mocks": "^2.1.1",
