--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -27,7 +27,8 @@
     "@types/fetch-mock": "^6.0.1",
     "@types/lolex": "^2.1.3",
     "fetch-mock": "^6.3.0",
-    "lolex": "^2.7.5"
+    "lolex": "^2.7.5",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "typescript": "~3.0.1"
