--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/jest-koa-mocks/README.md",
   "dependencies": {
     "koa": "^2.5.0",
-    "node-mocks-http": "^1.5.8"
+    "node-mocks-http": "^1.5.8",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
