--- a/packages/jest-mock-router/package.json
+++ b/packages/jest-mock-router/package.json
@@ -35,5 +35,8 @@
       "@types/react-router"
     ]
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "dependencies": {
+    "tslib": "^1.9.3"
+  }
 }
