--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-compose-enhancers/README.md",
   "dependencies": {
-    "hoist-non-react-statics": "^3.0.1"
+    "hoist-non-react-statics": "^3.0.1",
+    "tslib": "^1.9.3"
   },
   "peerDependencies": {
     "react": "^16.3.2"
