--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-effect/README.md",
   "dependencies": {
-    "react-tree-walker": "^4.3.0"
+    "react-tree-walker": "^4.3.0",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "typescript": "~3.0.1"
