--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-html/README.md",
   "dependencies": {
-    "@shopify/react-serialize": "^1.0.10"
+    "@shopify/react-serialize": "^1.0.10",
+    "tslib": "^1.9.3"
   },
   "peerDependencies": {
     "react": "^16.3.2",
