--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "@shopify/network": "^1.2.0",
     "@shopify/react-effect": "^1.0.0",
-    "@types/koa": "^2.0.46"
+    "@types/koa": "^2.0.46",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "typescript": "~3.0.1"
