--- a/packages/react-serialize/package.json
+++ b/packages/react-serialize/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-serialize/README.md",
   "dependencies": {
-    "serialize-javascript": "^1.5.0"
+    "serialize-javascript": "^1.5.0",
+    "tslib": "^1.9.3"
   },
   "peerDependencies": {
     "react": "^16.0.0"
