--- a/packages/useful-types/package.json
+++ b/packages/useful-types/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/useful-types/README.md",
   "dependencies": {
-    "@types/react": ">=16.4.0"
+    "@types/react": ">=16.4.0",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "typescript": "~3.0.1"
