--- a/packages/with-env/package.json
+++ b/packages/with-env/package.json
@@ -25,5 +25,8 @@
   "devDependencies": {
     "typescript": "~3.0.1"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "dependencies": {
+    "tslib": "^1.9.3"
+  }
 }
