--- a/packages/babel-plugin-react-i18n/package.json
+++ b/packages/babel-plugin-react-i18n/package.json
@@ -23,9 +23,13 @@
     "url": "https://github.com/shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/babel-plugin-react-i18n/README.md",
-  "dependencies": {},
+  "dependencies": {
+    "string-hash": "^1.1.3"
+  },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@babel/types": "^7.3.0",
+    "@types/babel__core": "^7.0.4",
     "@types/babel__template": "^7.0.1",
     "@types/babel__traverse": "^7.0.5",
     "typescript": "~3.0.1"
