--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "16.7.22",
     "@types/react-helmet": "^5.0.6",
     "codecov": "^3.0.2",
+    "element-closest": "^3.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.0.0",
@@ -48,6 +49,7 @@
     "graphql-tag": "^2.8.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
+    "jest-enzyme": "^7.0.1",
     "jest-transform-graphql": "^2.1.0",
     "lerna": "^2.9.0",
     "plop": "^2.0.0",
