--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.5",
-    "@types/react": "16.7.22",
+    "@types/react": "16.8.2",
     "@types/react-helmet": "^5.0.6",
     "codecov": "^3.0.2",
     "element-closest": "^3.0.1",
@@ -54,16 +54,16 @@
     "lerna": "^2.9.0",
     "plop": "^2.0.0",
     "prettier": "^1.14.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
     "tslib": "^1.9.3",
     "typescript": "~3.0.1"
   },
+  "dependencies": {},
   "resolutions": {
-    "@types/react": "16.7.22"
-  },
-  "dependencies": {}
+    "@types/react": "16.8.2"
+  }
 }
