--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -27,7 +27,7 @@
     "browser-unhandled-rejection": "^1.0.2",
     "caniuse-api": "^3.0.0",
     "intl-pluralrules": "^0.2.1",
-    "isomorphic-fetch": "^2.2.1",
+    "node-fetch": "^2.3.0",
     "tslib": "^1.9.3",
     "url-search-params-polyfill": "^5.0.0",
     "whatwg-fetch": "^3.0.0"
