--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-effect",
-  "version": "2.0.1",
+  "version": "3.0.0-beta.1",
   "license": "MIT",
   "description": "A component and set of utilities for performing effects within a universal React app",
   "main": "dist/index.js",
