--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "7.1.1",
+  "version": "8.0.0-beta.1",
   "license": "MIT",
   "description": "A component to render your react app with no static HTML.",
   "main": "dist/index.js",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-html/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^2.0.1",
+    "@shopify/react-effect": "3.0.0-beta.1",
     "@shopify/react-serialize": "^1.0.12",
     "@shopify/useful-types": "^1.1.2",
     "tslib": "^1.9.3"
