--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -26,6 +26,7 @@
     "@babel/polyfill": "^7.0.0",
     "browser-unhandled-rejection": "^1.0.2",
     "caniuse-api": "^3.0.0",
+    "intersection-observer": "^0.5.1",
     "intl-pluralrules": "^0.2.1",
     "node-fetch": "^2.3.0",
     "tslib": "^1.9.3",
