--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -27,6 +27,7 @@
     "@shopify/async": "^1.2.1",
     "@shopify/javascript-utilities": "^2.4.0",
     "@shopify/react-effect": "^2.1.0",
+    "@shopify/react-intersection-observer": "^1.0.0",
     "@shopify/useful-types": "^1.1.2"
   },
   "devDependencies": {
