--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -28,6 +28,7 @@
     "@types/lolex": "^2.1.3",
     "fetch-mock": "^6.3.0",
     "lolex": "^2.7.5",
+    "promise": "^8.0.3",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
