--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@shopify/async": "^1.3.2",
     "@shopify/react-async": "^2.1.3",
+    "@shopify/react-hooks": "^1.1.2",
     "@shopify/useful-types": "^1.2.4",
     "apollo-client": "^2.3.8",
     "graphql-typed": "^0.4.0",
