--- a/packages/react-tracking-pixel/package.json
+++ b/packages/react-tracking-pixel/package.json
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-tracking-pixel/README.md",
   "dependencies": {
-    "@shopify/react-preconnect": "^0.1.7",
-    "lodash": "^4.17.4",
+    "@shopify/react-html": "^8.0.4",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
