--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@shopify/i18n": "^0.1.3",
     "@shopify/react-effect": "^3.0.1",
+    "@shopify/react-hooks": "^1.0.0",
     "@types/hoist-non-react-statics": "^3.0.1",
     "hoist-non-react-statics": "^3.0.1",
     "prop-types": "^15.6.2",
