--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -42,6 +42,7 @@
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
     "graphql": "^14.0.0",
+    "graphql-config-utilities": "^0.0.0",
     "graphql-tool-utilities": "^0.10.1"
   },
   "peerDependencies": {
