--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -32,6 +32,7 @@
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
     "graphql": "^14.0.0",
+    "graphql-config-utilities": "^0.0.0",
     "graphql-tool-utilities": "^0.10.1",
     "yargs": "^11.0.0"
   }
