--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/jest-dom-mocks/README.md",
   "dependencies": {
+    "@shopify/async": "^1.3.2",
     "@shopify/javascript-utilities": "^2.1.0",
     "@types/fetch-mock": "^6.0.1",
     "@types/lolex": "^2.1.3",
