--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@shopify/app-bridge": "^0.7.3",
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/faker": "^4.1.5",
     "@types/jest": "^23.3.5",
     "@types/react": "16.8.2",
     "@types/react-dom": "^16.8.3",
@@ -45,6 +46,7 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.15.0",
     "eslint-plugin-shopify": "28.0.0",
+    "faker": "^4.1.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.0",
     "isomorphic-fetch": "^2.2.1",
