--- a/packages/react-form/package.json
+++ b/packages/react-form/package.json
@@ -37,6 +37,8 @@
   ],
   "dependencies": {
     "@shopify/predicates": "^1.1.0",
+    "@shopify/react-hooks": "^1.2.1",
+    "fast-deep-equal": "^2.0.1",
     "get-value": "^3.0.1"
   }
 }
