--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -29,6 +29,7 @@
     "@types/babel__core": "^7.0.4",
     "@types/babel__template": "^7.0.1",
     "@types/babel__traverse": "^7.0.5",
+    "@types/glob": "^7.1.1",
     "intl-pluralrules": "^0.2.1",
     "typescript": "~3.2.1"
   },
@@ -38,6 +39,7 @@
     "@shopify/react-hooks": "^1.2.1",
     "@shopify/useful-types": "^1.3.0",
     "@types/hoist-non-react-statics": "^3.0.1",
+    "glob": "^7.1.4",
     "hoist-non-react-statics": "^3.0.1",
     "prop-types": "^15.6.2",
     "string-hash": "^1.1.3",
