--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -34,6 +34,8 @@
     "typescript": "~3.2.1"
   },
   "dependencies": {
+    "@shopify/decorators": "^1.1.4",
+    "@shopify/function-enhancers": "^1.0.4",
     "@shopify/i18n": "^0.1.5",
     "@shopify/react-effect": "^3.0.4",
     "@shopify/react-hooks": "^1.2.1",
