--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     },
     "rules": {
       "shopify/jest/no-snapshots": "off",
-      "shopify/jest/no-vague-titles": ["error", {
-        "allow": "all"
-      }]
+      "shopify/jest/no-vague-titles": [
+        "error",
+        {
+          "allow": "all"
+        }
+      ]
     }
   },
   "scripts": {
@@ -64,7 +67,7 @@
     "@types/node": "^10.0.4",
     "@types/yargs": "^11.0.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-shopify": "^28.0.0",
+    "eslint-plugin-shopify": "^29.0.2",
     "graphql": "^14.0.0",
     "in-publish": "^2.0.0",
     "jest": "^24.7.1",
