--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -27,6 +27,8 @@
     "@shopify/async": "^2.0.0",
     "@shopify/javascript-utilities": "^2.4.0",
     "@shopify/react-effect": "^3.2.0",
+    "@shopify/react-hydrate": "^1.1.0",
+    "@shopify/react-idle": "^1.0.1",
     "@shopify/react-intersection-observer": "^2.0.3",
     "@shopify/useful-types": "^1.3.0"
   },
