--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-html/README.md",
   "dependencies": {
     "@shopify/react-effect": "^3.2.0",
+    "@shopify/react-hydrate": "^1.1.0",
     "@shopify/react-serialize": "^1.0.15",
     "@shopify/useful-types": "^1.3.0",
     "tslib": "^1.9.3"
