--- a/packages/koa-react-sidecar/package.json
+++ b/packages/koa-react-sidecar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-react-sidecar",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "description": "Approachable React Server Side Rendering for non-node projects.",
   "main": "dist/index.js",
@@ -24,17 +24,19 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-react-sidecar/README.md",
   "dependencies": {
-    "koa": "^2.5.0",
-    "node-mocks-http": "^1.5.8",
     "@shopify/network": "^1.4.1",
     "@shopify/react-effect": "^3.2.0",
     "@shopify/react-html": "8.1.3",
-    "@shopify/react-network": "3.1.2"
+    "@shopify/react-network": "3.1.2",
+    "koa": "^2.5.0",
+    "node-mocks-http": "^1.5.8"
   },
   "devDependencies": {
     "@types/koa": "^2.0.44",
-    "typescript": "~3.2.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "typescript": "~3.2.1"
   },
-  "files": ["dist/*"]
+  "files": [
+    "dist/*"
+  ]
 }
