--- a/packages/react-hydrate/package.json
+++ b/packages/react-hydrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hydrate",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
   "description": "Utilities for hydrating server-rendered React apps",
   "main": "dist/index.js",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-hydrate/README.md",
   "dependencies": {
+    "@shopify/react-effect": "^3.2.0",
     "@shopify/react-hooks": "^1.2.1"
   },
   "devDependencies": {
