--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server/README.md",
   "dependencies": {
     "@shopify/network": "^1.4.1",
+    "@shopify/react-async": "^3.0.1",
     "@shopify/react-effect": "^3.2.0",
     "@shopify/react-html": "8.1.3",
     "@shopify/react-network": "3.1.2",
