--- a/packages/react-self-serializers/package.json
+++ b/packages/react-self-serializers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-self-serializers",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "A set of self-serializing providers for @shopify/react-html applications",
   "main": "dist/index.js",
@@ -28,13 +28,15 @@
     "@shopify/react-i18n": "^1.5.0"
   },
   "devDependencies": {
-    "typescript": "~3.2.1",
     "@shopify/react-testing": "^1.7.3",
+    "@types/faker": "4.1.5",
     "faker": "^4.1.0",
-    "@types/faker": "4.1.5"
+    "typescript": "~3.2.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "files": ["dist/*"]
+  "files": [
+    "dist/*"
+  ]
 }
