--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lemonmade/web-worker",
-  "version": "0.0.2-beta.1",
+  "version": "0.0.2-beta.3",
   "license": "MIT",
   "description": "Tools for making web workers fun to use.",
   "main": "dist/index.js",
@@ -23,19 +23,23 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/web-workers/README.md",
   "dependencies": {
-    "@babel/types": "^7.0.0",
-    "@types/babel__core": "^7.0.0",
-    "@types/babel__traverse": "^7.0.0",
     "@types/webpack": "^4.0.0",
     "webpack-virtual-modules": "^0.1.12"
   },
   "devDependencies": {
+    "@babel/types": ">=7.0.0",
+    "@types/babel__core": ">=7.0.0",
+    "@types/babel__traverse": ">=7.0.0",
     "@types/webpack-virtual-modules": "^0.1.0"
   },
   "files": [
     "dist/*",
-    "./*.js",
-    "./*.d.ts"
+    "babel.js",
+    "babel.d.ts",
+    "webpack.js",
+    "webpack.d.ts",
+    "worker.js",
+    "worker.d.ts"
   ],
   "optionalDependencies": {
     "@babel/core": "^7.0.0",
