--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -2,7 +2,7 @@
   "name": "@shopify/react-web-worker",
   "version": "0.0.0",
   "license": "MIT",
-  "description": "React hooks for using web workers",
+  "description": "A hook for using web workers in React applications",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-web-worker/README.md",
   "dependencies": {
     "@shopify/react-hooks": "^1.2.3",
-    "@shopify/web-worker": "^0.0.3"
+    "@shopify/web-worker": "^0.0.4"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0",
