Allow multiple workers (#1132)

--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/web-workers/README.md",
   "dependencies": {
     "@types/webpack": "^4.0.0",
+    "loader-utils": "^1.0.0",
     "webpack-virtual-modules": "^0.1.12"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/babel__core": ">=7.0.0",
     "@types/babel__traverse": ">=7.0.0",
     "@types/koa-mount": "^3.0.1",
+    "@types/loader-utils": "^1.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
     "koa-mount": "^3.0.0"
   },
