--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "element-closest": "^3.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-shopify": "30.0.1",
+    "eslint": "^6.5.1",
+    "eslint-plugin-shopify": "^31.0.0",
     "faker": "^4.1.0",
     "full-icu": "^1.3.0",
     "get-port": "^5.0.0",
