Update eslint-plugin-shopify v31.0.0 (#91)
* Update eslint

* with typechecking

* no-extraneous test

* real plugin this time

--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -43,7 +43,10 @@
     "glob": "^7.1.2",
     "graphql": "^14.0.0",
     "graphql-config-utilities": "^1.0.0",
-    "graphql-tool-utilities": "^1.1.0"
+    "graphql-tool-utilities": "^1.1.0",
+    "yargs":"^14.2.0",
+    "@types/yargs": "11.0.0",
+    "graphql-config": "^2.2.1"
   },
   "peerDependencies": {
     "graphql-typed": "^0.4.0"
