--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -30,6 +30,10 @@
     "pretest": "yarn build",
     "prepublishOnly": "yarn build"
   },
+  "devDependencies": {
+    "common-tags": "1.8.0",
+    "@types/common-tags": "1.4.0"
+  },
   "dependencies": {
     "@jest/transform": "^24.7.1",
     "@types/fs-extra": "^5.0.5",
