--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -34,6 +34,7 @@
     "graphql": "^14.0.0",
     "graphql-config-utilities": "^1.0.0",
     "graphql-tool-utilities": "^1.1.0",
-    "yargs": "^11.0.0"
+    "yargs": "^11.0.0",
+    "graphql-config": "^2.2.1"
   }
 }
