--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,8 +24,8 @@
     "**/*.js": true
   },
   "editor.formatOnSave": true,
-  "prettier.stylelintIntegration": true,
-  "prettier.eslintIntegration": true,
+  "prettier-stylelint.stylelintIntegration": true,
+  "prettier-eslint.eslintIntegration": true,
   "eslint.validate": ["typescript", "typescriptreact"],
   "javascript.implicitProjectConfig.experimentalDecorators": true,
   "cSpell.ignoreWords": ["transferables"]
