--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-web-worker/README.md",
   "dependencies": {
     "@shopify/react-hooks": "^1.3.0",
+    "@shopify/useful-types": "^2.1.0",
     "@shopify/web-worker": "^1.2.0"
   },
   "peerDependencies": {
