--- a/packages/react-i18n-webpack-plugin/package.json
+++ b/packages/react-i18n-webpack-plugin/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-i18n-webpack-plugin/README.md",
   "dependencies": {
-    "@types/webpack": "^4.0.0",
+    "@types/webpack@": "*",
     "change-case": "^3.1.0",
     "string-hash": "^1.1.3",
     "webpack-virtual-modules": "^0.1.12"
