--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "1.0.24",
+  "version": "1.0.24-remove-babel-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications.",
   "main": "dist/index.js",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@shopify/react-hooks": "^1.3.0",
     "@shopify/react-html": "^9.2.8",
-    "@shopify/react-i18n": "^2.1.7"
+    "@shopify/react-i18n": "^2.1.7-0.0.0-remove-babel-beta.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
