--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -40,6 +40,7 @@
     "@shopify/react-hooks": "^1.3.2",
     "@shopify/useful-types": "^2.1.2",
     "@types/hoist-non-react-statics": "^3.0.1",
+    "change-case": "^3.1.0",
     "glob": "^7.1.4",
     "hoist-non-react-statics": "^3.0.1",
     "prop-types": "^15.6.2",
@@ -52,11 +53,14 @@
   },
   "optionalDependencies": {
     "@babel/template": "^7.0.0",
-    "@babel/traverse": "^7.0.0"
+    "@babel/traverse": "^7.0.0",
+    "fs-extra": "^8.1.0"
   },
   "files": [
     "dist/*",
     "babel.d.ts",
-    "babel.js"
+    "babel.js",
+    "generate-index.d.ts",
+    "generate-index.js"
   ]
 }
