--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@shopify/react-hooks": "^1.3.2",
     "@shopify/react-html": "^9.2.10",
-    "@shopify/react-i18n": "^2.1.9"
+    "@shopify/react-i18n": "2.1.9"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
