--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -10,6 +10,9 @@
     "access": "public",
     "@shopify:registry": "https://registry.npmjs.org"
   },
+  "scripts": {
+    "build": "tsc --p tsconfig.json"
+  },
   "author": "Shopify Inc.",
   "repository": {
     "type": "git",
